Fix images being too wide

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,3 +100,7 @@ pre > code {
 	border-radius: $border-radius;
 	overflow-y: auto;
 }
+
+img {
+    max-width: 100%;
+}
